--- a/client/src/styles/scss/pages/_watchlist.scss
+++ b/client/src/styles/scss/pages/_watchlist.scss
@@ -31,16 +31,13 @@
 
 @media (min-width: 1000px) {
   .watchlist-container {
-    margin-top: 150px;
-    padding: 0px $spacing-120;
+    margin-top: 200px;
+    padding: 0px 180px;
   }
 }
 
 @media (min-width: 1300px) {
     .watchlist-container {
-    margin-top: 150px;
-    padding: 0px $spacing-120;
-
     .watchlist-movies-container {
     grid-template-columns: repeat((6, 1fr));
     gap: $spacing-16;
